# passman

./: Cargo.toml  README.md
html/: README.md  index.html  package.json  vite.config.js
html/src/: App.vue  lib.js  main.js
html/src/assets/: main.css
html/src/router/: index.js
html/src/views/: ChangePassword.vue  CreateUser.vue  EditPassword.vue  List.vue  Login.vue
src/: db.rs  encryption.rs  error.rs  main.rs  password.rs  query.rs  service.rs  user.rs  util.rs
