[package]
name = "passman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
argon2 = { version = "0.5.3", features = ["std"] }
base64 = { version = "0.21.7", features = ["std"] }
conerror = "0.1.5"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rustic-jsonrpc = "0.1.1"
env_logger = "0.11.2"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["server", "http1", "tokio"] }
log = "0.4.20"
structopt = "0.3.26"
rust-embed = { version = "8.3.0", features = ["mime-guess"] }


[profile.release]
strip = true
